style：移除过时的api/调整配置